# rust-rest-api-with-database

./: Cargo.toml  README.md
migrations/00000000000000_diesel_initial_setup/: down.sql
migrations/2023-07-11-200148_create_users/: up.sql
src/: lib.rs  main.rs  schema.rs
tests/: get_hello_world_test.rs
