[package]
name = "rust-rest-api-with-database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.11", features = ["derive", "env"] }
diesel = { version = "2.1.0", features = ["postgres", "sqlite"] }
env_logger = "0.10.0"
iron = "0.6.1"
log = "0.4.19"
router = "0.6.0"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.100"
